feat: блокирование кнопки сохранения при невалидном пароле, закрытие профиля при подтверждении смены пароля

--- a/src/app/pages/home/components/profile/profile.component.html
+++ b/src/app/pages/home/components/profile/profile.component.html
@@ -20,6 +20,7 @@
     />
     <p-button
       label="{{ passwordInputVisible ? 'Сохранить' : 'Изменить пароль' }}"
+      [disabled]="formGroup.invalid && passwordInputVisible"
       (click)="onPasswordButtonClick()"
     />
   </ng-template>
