feat: добавлены стили для профиля, добавлена сочетаемость компоненты поля ввода пароля с аддоном

--- a/src/app/pages/home/components/profile/profile-photo/profile-photo.component.html
+++ b/src/app/pages/home/components/profile/profile-photo/profile-photo.component.html
@@ -1,13 +1,14 @@
 <img
   *ngIf="userPhoto$ | async; else photoSkeleton"
-  class="profile__photo"
+  class="profile-photo__image"
   src="{{ userPhoto$ | async }}"
   alt="Фото профиля"
 />
 <ng-template #photoSkeleton>
-  <p-skeleton class="profile__photo-skeleton"></p-skeleton>
+  <p-skeleton class="profile-photo__skeleton"></p-skeleton>
 </ng-template>
 <p-fileUpload
+  class="profile-photo__upload"
   mode="basic"
   chooseLabel="Изменить фото профиля"
   chooseIcon="pi pi-upload"
