--- a/src/app/shared/components/password-input/password-input.component.html
+++ b/src/app/shared/components/password-input/password-input.component.html
@@ -1,24 +1,20 @@
-<p-inputGroup class="password-input">
-  <p-inputGroupAddon>
-    <i class="pi pi-lock"></i>
-  </p-inputGroupAddon>
-  <p-password
-    [placeholder]="'Пароль'"
-    [toggleMask]="true"
-    [formControl]="control"
-    [promptLabel]="'Введите пароль'"
-    [weakLabel]="'Слабый'"
-    [mediumLabel]="'Средний'"
-    [strongLabel]="'Сильный'"
-  >
-    <ng-template pTemplate="footer">
-      <p-divider></p-divider>
-      <p class="mt-2">Требования:</p>
-      <ul class="password-input__errors">
-        <li *ngFor="let req of requrements | keyvalue">
-          {{ req.key | formatPasswordRequirement: req.value }}
-        </li>
-      </ul>
-    </ng-template>
-  </p-password>
-</p-inputGroup>
+<p-password
+  class="password-input"
+  [placeholder]="placeholder"
+  [toggleMask]="true"
+  [formControl]="control"
+  [promptLabel]="'Введите пароль'"
+  [weakLabel]="'Слабый'"
+  [mediumLabel]="'Средний'"
+  [strongLabel]="'Сильный'"
+>
+  <ng-template pTemplate="footer">
+    <p-divider></p-divider>
+    <p class="mt-2">Требования:</p>
+    <ul class="password-input__errors">
+      <li *ngFor="let req of requrements | keyvalue">
+        {{ req.key | formatPasswordRequirement: req.value }}
+      </li>
+    </ul>
+  </ng-template>
+</p-password>
