--- a/src/app/shared/components/password-input/password-input.component.scss
+++ b/src/app/shared/components/password-input/password-input.component.scss
@@ -1,3 +1,13 @@
+:host {
+  flex-grow: 1;
+
+  ::ng-deep {
+    .p-inputtext {
+      width: 100%;
+    }
+  }
+}
+
 .password-input {
   &__errors {
     list-style: none;
