--- a/src/app/pages/auth/components/login-page/login-page.component.html
+++ b/src/app/pages/auth/components/login-page/login-page.component.html
@@ -12,10 +12,15 @@
       class="login-page__login-input"
       [control]="formGroup.controls.login"
     ></app-login-input>
-    <app-password-input
-      class="login-page__password-input"
-      [control]="formGroup.controls.password"
-    ></app-password-input>
+    <p-inputGroup class="login-page__password-input">
+      <p-inputGroupAddon>
+        <i class="pi pi-lock"></i>
+      </p-inputGroupAddon>
+      <app-password-input
+        [control]="formGroup.controls.password"
+      ></app-password-input>
+    </p-inputGroup>
+
     <p-button
       class="login-page__submit-button"
       (mouseleave)="onSubmitButtonMouseOut()"
