--- a/src/app/pages/home/components/profile/profile.component.scss
+++ b/src/app/pages/home/components/profile/profile.component.scss
@@ -1,6 +1,13 @@
-:host ::ng-deep {
-  .profile__photo-skeleton .p-skeleton {
-    width: 100px !important;
-    height: 100px !important;
+@import 'mixins';
+
+.profile {
+  width: 100%;
+  height: 50vh;
+
+  @include flex($justify-content: space-between);
+
+  &__photo {
+    max-width: 50%;
+    height: 100%;
   }
 }
