--- a/src/app/pages/home/components/profile/profile-photo/profile-photo.component.scss
+++ b/src/app/pages/home/components/profile/profile-photo/profile-photo.component.scss
@@ -1,35 +1,20 @@
 @import 'mixins';
+@import 'functions';
 
 :host {
-  @include flex($direction: column, $justify-content: space-between);
-  height: 100%;
-
-  padding: 20px;
-
-  ::ng-deep {
-    .profile-photo__skeleton .p-skeleton {
-      width: auto !important;
-      height: auto !important;
-      aspect-ratio: 1 / 1;
-      max-height: 100%;
-    }
-  }
+  @include flex($direction: column, $gap: 10px);
+  min-width: 300px;
 }
 
 .profile-photo {
-  $upload-height: 65px;
-
   &__image {
-    object-fit: cover;
-    object-position: center;
+    object-fit: contain;
 
-    padding: 10px;
-
-    max-height: calc(100% - $upload-height);
-    aspect-ratio: 1 / 1;
+    width: 100%;
+    height: to-responsive(250px, $relative-to: 1500px, $min: 120px);
   }
 
   &__upload {
-    height: $upload-height;
+    width: 100%;
   }
 }
