--- a/src/app/shared/styles/theme/_extensions.scss
+++ b/src/app/shared/styles/theme/_extensions.scss
@@ -8,3 +8,4 @@
 @import 'extensions/toast';
 @import 'extensions/progress-spinner';
 @import 'extensions/dialog';
+@import 'extensions/file-upload';
