--- a/src/app/pages/home/components/profile/profile.component.html
+++ b/src/app/pages/home/components/profile/profile.component.html
@@ -4,13 +4,23 @@
   [(visible)]="profileVisible"
   [dismissableMask]="true"
   [draggable]="false"
+  (onHide)="passwordInputVisible = false; passwordForm.reset()"
 >
   <div class="profile">
     <app-profile-photo class="profile__photo"></app-profile-photo>
-    <div class="profile__text-data">
-      <span class="profile__email-name">Почта</span>
-      <span class="profile__email-value">{{ email$ | async }}</span>
-      <form *ngIf="passwordInputVisible" class="change-password-form">
+    <p-divider class="profile__divider"></p-divider>
+    <div class="profile__text-fields">
+      <div class="info-fields">
+        <div class="info-fields__field">
+          <span class="info-fields__name">Почта</span>
+          <span class="info-fields__value">{{ email$ | async }}</span>
+        </div>
+      </div>
+      <p-divider></p-divider>
+      <form
+        class="change-password-form"
+        [ngClass]="{ 'change-password-form_visible': passwordInputVisible }"
+      >
         <app-password-input
           [placeholder]="'Новый пароль'"
           [control]="passwordForm.controls.password"
@@ -31,7 +41,7 @@
     />
     <p-button
       label="{{ passwordInputVisible ? 'Сохранить' : 'Изменить пароль' }}"
-      [disabled]="passwordForm.invalid && passwordInputVisible"
+      [disabled]="!passwordFormIsValid && passwordInputVisible"
       (click)="onPasswordButtonClick()"
     />
   </ng-template>
