--- a/src/app/shared/styles/_mixins.scss
+++ b/src/app/shared/styles/_mixins.scss
@@ -21,3 +21,22 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+@mixin scrollbar() {
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: var(--surface-0);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--surface-200);
+    border-radius: 20px;
+
+    &:hover {
+      background-color: var(--pink-600);
+    }
+  }
+}
