feat: подтверждение смены пароля через попап вместо диалога

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <router-outlet></router-outlet>
 <p-toast></p-toast>
 <p-confirmDialog
+  [key]="'dialog'"
   [acceptLabel]="'Да'"
   [rejectLabel]="'Нет'"
   [dismissableMask]="true"
 ></p-confirmDialog>
+<p-confirmPopup [key]="'popup'" />
