fix: исправлен цвет текста кнопки отказа в попапе

--- a/src/app/shared/styles/theme/extensions/_button.scss
+++ b/src/app/shared/styles/theme/extensions/_button.scss
@@ -18,6 +18,10 @@
   font-weight: bold;
 }
 
+.p-button-text {
+  color: var(--teal-600);
+}
+
 form.ng-valid .p-button-submit {
   background-size: 180% 180%;
   background-color: var(--primary-secondary-darkened-gradient);
