--- a/src/app/pages/home/components/header/header.component.scss
+++ b/src/app/pages/home/components/header/header.component.scss
@@ -14,6 +14,17 @@
         transition: top var(--hover-transition);
       }
     }
+
+    .header__profile-link .p-menuitem-icon {
+      width: 1.5rem;
+      aspect-ratio: 1 / 1;
+
+      font-size: 0;
+
+      background-size: 100% 100%;
+      background-position: center;
+      border-radius: 50%;
+    }
   }
 
   &:has(.header_shrunk) ::ng-deep {
