--- a/src/app/pages/home/components/profile/profile.component.scss
+++ b/src/app/pages/home/components/profile/profile.component.scss
@@ -38,15 +38,17 @@
 .info-fields {
   @include flex($direction: column, $align-items: flex-start);
 
-  &__name {
-    display: block;
-    font-weight: bold;
+  &__field {
+    @include flex($direction: column, $gap: 8px, $align-items: flex-start);
+  }
 
+  &__name {
+    font-weight: bold;
     font-size: 1.5em;
   }
 
   &__value {
-    padding-left: 0.5em;
+    padding-left: 1em;
   }
 }
 
