feat: смена попапа на модальное окно

--- a/src/app/pages/home/components/profile/profile.component.html
+++ b/src/app/pages/home/components/profile/profile.component.html
@@ -42,7 +42,7 @@
     <p-button
       label="{{ passwordInputVisible ? 'Сохранить' : 'Изменить пароль' }}"
       [disabled]="!passwordFormIsValid && passwordInputVisible"
-      (click)="onPasswordButtonClick($event)"
+      (click)="onPasswordButtonClick()"
     />
   </ng-template>
 </p-dialog>
