--- a/src/app/shared/styles/theme/extensions/_dialog.scss
+++ b/src/app/shared/styles/theme/extensions/_dialog.scss
@@ -8,6 +8,11 @@
   @include scrollbar();
 }
 
-.p-component-overlay {
+.p-dialog-mask {
   backdrop-filter: blur(5px);
+  z-index: var(--dialog-layer) !important;
+}
+
+.confirm-dialog-mask {
+  z-index: var(--confirm-dialog-layer) !important;
 }
