--- a/src/app/pages/home/components/profile/profile.component.html
+++ b/src/app/pages/home/components/profile/profile.component.html
@@ -1,48 +1,50 @@
-<p-dialog
-  header="Ваши данные"
-  [modal]="true"
-  [(visible)]="profileVisible"
-  [dismissableMask]="true"
-  [draggable]="false"
-  (onHide)="passwordInputVisible = false; passwordForm.reset()"
->
-  <div class="profile">
-    <app-profile-photo class="profile__photo"></app-profile-photo>
-    <p-divider class="profile__divider"></p-divider>
-    <div class="profile__text-fields">
-      <div class="info-fields">
-        <div class="info-fields__field">
-          <span class="info-fields__name">Почта</span>
-          <span class="info-fields__value">{{ email$ | async }}</span>
-        </div>
+<div class="profile">
+  <app-profile-photo class="profile__photo"></app-profile-photo>
+  <p-divider class="profile__divider"></p-divider>
+  <div class="profile__text-fields">
+    <div class="info-fields">
+      <div class="info-fields__field">
+        <span class="info-fields__name">Почта</span>
+        <span class="info-fields__value">{{ email$ | async }}</span>
       </div>
-      <p-divider></p-divider>
-      <form
-        class="change-password-form"
-        [ngClass]="{ 'change-password-form_visible': passwordInputVisible }"
-      >
-        <app-password-input
-          [placeholder]="'Новый пароль'"
-          [control]="passwordForm.controls.password"
-        ></app-password-input>
-        <app-password-input
-          [placeholder]="'Подтвердите пароль'"
-          [control]="passwordForm.controls.passwordConfirm"
-        ></app-password-input>
-      </form>
     </div>
+    <p-divider></p-divider>
+    <p-button
+      *ngIf="mode === 'view'; else changePasswordForm"
+      class="change-password-button"
+      [ngClass]="{
+        'change-password-button_disappearing':
+          modeTransitionGoing && mode === 'view'
+      }"
+      [icon]="'pi pi-pencil'"
+      [label]="'Изменить пароль'"
+      (click)="modeTransitionGoing = true"
+      (animationend)="mode = 'edit'; modeTransitionGoing = false"
+    ></p-button>
   </div>
-
-  <ng-template pTemplate="footer">
+</div>
+<ng-template #changePasswordForm>
+  <form
+    class="profile__change-password-form change-password-form"
+    [formGroup]="passwordForm"
+  >
+    <app-password-input
+      class="change-password-form__password-input"
+      [placeholder]="'Новый пароль'"
+      [control]="passwordForm.controls.password"
+    ></app-password-input>
+    <app-password-input
+      class="change-password-form__password-input"
+      [placeholder]="'Подтвердите пароль'"
+      [control]="passwordForm.controls.passwordConfirm"
+    ></app-password-input>
     <p-button
-      label="Закрыть"
-      severity="secondary"
-      (click)="profileVisible = false"
-    />
-    <p-button
-      label="{{ passwordInputVisible ? 'Сохранить' : 'Изменить пароль' }}"
-      [disabled]="!passwordFormIsValid && passwordInputVisible"
-      (click)="onPasswordButtonClick()"
-    />
-  </ng-template>
-</p-dialog>
+      class="change-password-form__submit-button"
+      [label]="'Сохранить'"
+      [severity]="'submit'"
+      [raised]="passwordForm.valid"
+      [disabled]="passwordForm.invalid"
+      (click)="onPasswordFormSubmit()"
+    ></p-button>
+  </form>
+</ng-template>
