--- a/src/app/pages/home/components/profile/profile.component.scss
+++ b/src/app/pages/home/components/profile/profile.component.scss
@@ -1,17 +1,18 @@
 @import 'mixins';
+@import 'animations';
 
 :host ::ng-deep {
   .password-input__errors {
-    font-size: 0.75rem;
+    font-size: 0.9rem;
   }
 }
 
 .profile {
-  width: clamp(300px, 55vw, 600px);
+  width: min(55vw, 650px);
   min-height: 50vh;
 
   padding: 15px 0;
-  @include flex($justify-content: space-around, $align-items: stretch);
+  @include flex($justify-content: space-between, $align-items: stretch);
 
   &__divider {
     display: none;
@@ -21,7 +22,16 @@
     width: 50%;
   }
 
-  @media (max-width: 1000px) {
+  &__text-fields {
+    min-width: 300px;
+  }
+
+  &__change-password-form {
+    width: 100%;
+  }
+
+  @media (max-width: 1100px) {
+    width: max(300px, 45vw);
     flex-direction: column;
 
     &__photo {
@@ -50,16 +60,30 @@
   &__value {
     padding-left: 1em;
   }
+
+  @media (max-width: 1100px) {
+    margin: 0 auto;
+    width: min(100%, 300px);
+  }
 }
 
 .change-password-form {
   @include flex($direction: column, $gap: 20px);
-  opacity: 0;
-  transition: opacity var(--hover-transition);
-  pointer-events: none;
+  animation: appear var(--hover-transition) forwards;
 
-  &_visible {
-    opacity: 1;
-    pointer-events: all;
+  &__submit-button {
+    width: min(75%, 225px);
+  }
+
+  &__password-input {
+    width: min(100%, 300px);
+  }
+}
+
+.change-password-button {
+  @include flex();
+
+  &_disappearing {
+    animation: disappear var(--hover-transition) forwards;
   }
 }
