--- a/src/app/shared/styles/theme/_variables.scss
+++ b/src/app/shared/styles/theme/_variables.scss
@@ -29,6 +29,10 @@
   --header-layer: 2;
   --scrolltop-layer: 3;
   --footer-layer: 4;
+  --toast-layer: 5;
+  --dialog-layer: 6;
+  --confirm-dialog-layer: 7;
+  --dialog-toast-layer: 8;
 
   --section-border-radius: 50px;
 
