--- a/src/app/pages/home/components/profile/profile.component.scss
+++ b/src/app/pages/home/components/profile/profile.component.scss
@@ -9,7 +9,7 @@
 
 .profile {
   width: min(55vw, 650px);
-  min-height: 50vh;
+  height: 350px;
 
   padding: 15px 0;
   @include flex($justify-content: space-between, $align-items: stretch);
@@ -22,66 +22,82 @@
     width: 50%;
   }
 
-  &__text-fields {
-    min-width: 300px;
-  }
-
-  &__change-password-form {
-    width: 100%;
-  }
-
   @media (max-width: 1100px) {
-    width: max(300px, 45vw);
+    width: max(300px, 35vw);
+    height: auto;
+
     flex-direction: column;
+    align-items: center;
 
     &__photo {
       width: 100%;
-      min-height: 50%;
     }
 
     &__divider {
       display: block;
+      width: 100%;
     }
   }
 }
 
-.info-fields {
-  @include flex($direction: column, $align-items: flex-start);
+.text-fields {
+  width: 100%;
 
-  &__field {
-    @include flex($direction: column, $gap: 8px, $align-items: flex-start);
+  @include flex(
+    $direction: column,
+    $align-items: flex-start,
+    $justify-content: flex-start
+  );
+
+  &__info {
+    @include flex($direction: column, $align-items: flex-start);
+
+    @media (max-width: 1100px) {
+      width: 100%;
+    }
   }
 
   &__name {
+    display: block;
+
     font-weight: bold;
     font-size: 1.5em;
   }
 
   &__value {
+    padding-top: 8px;
     padding-left: 1em;
   }
 
-  @media (max-width: 1100px) {
-    margin: 0 auto;
-    width: min(100%, 300px);
+  &__divider {
+    width: 100%;
   }
 }
 
 .change-password-form {
-  @include flex($direction: column, $gap: 20px);
+  width: 100%;
+  flex: 1 0 auto;
+
+  @include flex($direction: column, $justify-content: space-between);
   animation: appear var(--hover-transition) forwards;
 
-  &__submit-button {
-    width: min(75%, 225px);
+  &__inputs {
+    width: 100%;
+    @include flex($direction: column, $gap: 1.25em);
   }
 
-  &__password-input {
-    width: min(100%, 300px);
+  &__submit-button {
+    width: 75%;
+  }
+
+  @media (max-width: 1100px) {
+    justify-content: center;
+    gap: 10px;
   }
 }
 
 .change-password-button {
-  @include flex();
+  margin: 0 auto;
 
   &_disappearing {
     animation: disappear var(--hover-transition) forwards;
