--- a/src/app/pages/home/components/profile/profile.component.scss
+++ b/src/app/pages/home/components/profile/profile.component.scss
@@ -50,11 +50,8 @@
   );
 
   &__info {
+    width: 100%;
     @include flex($direction: column, $align-items: flex-start);
-
-    @media (max-width: 1100px) {
-      width: 100%;
-    }
   }
 
   &__name {
@@ -71,6 +68,10 @@
 
   &__divider {
     width: 100%;
+  }
+
+  &:has(.change-password-button) {
+    justify-content: space-between;
   }
 }
 
