refactor: убрал лишний цвет из переменных

--- a/src/app/pages/home/components/footer/footer.component.scss
+++ b/src/app/pages/home/components/footer/footer.component.scss
@@ -2,7 +2,7 @@
 
 .footer {
   border-top-left-radius: 50px;
-  background-color: var(--grey-800);
+  background-color: var(--surface-1000);
 
   padding: 30px;
 
