--- a/src/app/shared/styles/theme/_variables.scss
+++ b/src/app/shared/styles/theme/_variables.scss
@@ -21,6 +21,8 @@
   --primary-secondary-gradient: #{$gradient-primary-secondary};
   --primary-secondary-darkened-gradient: #{$gradient-primary-secondary-darkened};
   --surface-0: #ffffff;
+  --surface-1000: #2f2f2f;
+  --surface-1100: black;
   --maskbg: rgba(0, 0, 0, 0.4);
 
   --hover-transition: ease-in-out 300ms;
