fix: изменение размеров изображения в профиле

--- a/src/app/pages/home/components/profile/profile.component.scss
+++ b/src/app/pages/home/components/profile/profile.component.scss
@@ -9,7 +9,7 @@
 
 .profile {
   width: min(55vw, 650px);
-  height: 350px;
+  min-height: 300px;
 
   padding: 15px 0;
   @include flex($justify-content: space-between, $align-items: stretch);
