--- a/src/app/pages/home/components/header/header.component.scss
+++ b/src/app/pages/home/components/header/header.component.scss
@@ -79,8 +79,8 @@
 
     font-size: 0;
 
-    background-size: 100% 100%;
-    background-position: center;
+    object-fit: cover;
+    object-position: center;
     border-radius: 50%;
   }
 
