--- a/src/app/pages/home/components/profile/profile-photo/profile-photo.component.scss
+++ b/src/app/pages/home/components/profile/profile-photo/profile-photo.component.scss
@@ -4,22 +4,29 @@
 :host {
   @include flex($direction: column, $justify-content: space-between);
   min-width: 300px;
-
-  @media (max-width: 1100px) {
-    justify-content: center;
-    gap: 10px;
-  }
 }
 
 .profile-photo {
   &__image {
-    object-fit: contain;
+    object-fit: cover;
+    object-position: center;
 
-    width: 100%;
-    height: to-responsive(250px, $relative-to: 1500px, $min: 120px);
+    width: 90%;
+    aspect-ratio: 1 / 1;
+
+    border-radius: 10px;
+
+    @media (max-width: 1100px) {
+      object-fit: contain;
+
+      width: 100%;
+      max-height: 200px;
+      aspect-ratio: auto;
+    }
   }
 
   &__upload {
+    padding-top: 10px;
     width: 100%;
   }
 }
