feat: добавлен кроппер изображений, изменена картинка-заглушка профиля

--- a/src/app/pages/auth/components/login-page/login-page.component.html
+++ b/src/app/pages/auth/components/login-page/login-page.component.html
@@ -22,7 +22,7 @@
     </p-inputGroup>
 
     <p-button
-      class="login-page__submit-button"
+      class="login-page__submit-button p-button-wrapper_center-text p-button-wrapper_full-width"
       (mouseleave)="onSubmitButtonMouseOut()"
       (click)="onSubmit($event)"
       [raised]="formGroup.valid"
