--- a/src/app/pages/home/components/profile/profile-photo/profile-photo.component.scss
+++ b/src/app/pages/home/components/profile/profile-photo/profile-photo.component.scss
@@ -7,26 +7,20 @@
 }
 
 .profile-photo {
+  &__image,
+  &__upload {
+    width: 90%;
+  }
+
   &__image {
     object-fit: cover;
     object-position: center;
 
-    width: 90%;
-    aspect-ratio: 1 / 1;
-
     border-radius: 10px;
-
-    @media (max-width: 1100px) {
-      object-fit: contain;
-
-      width: 100%;
-      max-height: 200px;
-      aspect-ratio: auto;
-    }
+    border: 2px solid var(--surface-500);
   }
 
   &__upload {
     padding-top: 10px;
-    width: 100%;
   }
 }
