--- a/src/app/pages/home/components/profile/profile.component.html
+++ b/src/app/pages/home/components/profile/profile.component.html
@@ -42,7 +42,7 @@
     </div>
 
     <p-button
-      class="change-password-form__submit-button"
+      class="change-password-form__submit-button p-button-wrapper_center-text p-button-wrapper_full-width"
       [label]="'Сохранить'"
       [severity]="'submit'"
       [raised]="passwordForm.valid"
