--- a/src/app/shared/styles/theme/_variables.scss
+++ b/src/app/shared/styles/theme/_variables.scss
@@ -24,6 +24,7 @@
   --surface-1000: #2f2f2f;
   --surface-1100: black;
   --maskbg: rgba(0, 0, 0, 0.4);
+  --cropper-outline-color: rgba(0, 0, 0, 0.4);
 
   --hover-transition: ease-in-out 300ms;
 
