--- a/src/app/shared/styles/theme/extensions/_button.scss
+++ b/src/app/shared/styles/theme/extensions/_button.scss
@@ -10,9 +10,17 @@
   }
 }
 
+.p-button-wrapper {
+  &_center-text .p-button {
+    justify-content: center;
+  }
+
+  &_full-width .p-button {
+    width: 100%;
+  }
+}
+
 .p-button-submit {
-  width: 100%;
-  justify-content: center;
   background: var(--primary-secondary-gradient);
   border: 2px solid var(--primary-500);
   font-weight: bold;
