fix: исправление стилей

--- a/src/app/pages/home/components/profile/profile-photo/profile-photo.component.html
+++ b/src/app/pages/home/components/profile/profile-photo/profile-photo.component.html
@@ -5,7 +5,7 @@
 />
 <p-fileUpload
   #fileUpload
-  class="profile-photo__upload full-width"
+  class="profile-photo__upload p-button-wrapper_full-width"
   mode="basic"
   chooseLabel="Изменить фото профиля"
   chooseIcon="pi pi-upload"
