feat: реализован кастомный инпут текста, удалены отображения ошибок у форм

--- a/src/app/shared/components/password-input/password-input.component.scss
+++ b/src/app/shared/components/password-input/password-input.component.scss
@@ -3,10 +3,15 @@
   width: 100%;
 
   ::ng-deep {
+    .p-password,
     .p-inputtext {
       width: 100%;
     }
   }
+}
+
+.p-inputgroup-addon + :host ::ng-deep .p-inputtext {
+  border-radius: 0 6px 6px 0;
 }
 
 .password-input {
