--- a/src/app/pages/auth/components/login-page/login-page.component.html
+++ b/src/app/pages/auth/components/login-page/login-page.component.html
@@ -8,10 +8,16 @@
       <h2 class="login-page__heading">Вход</h2>
       <p-divider></p-divider>
     </div>
-    <app-login-input
-      class="login-page__login-input"
-      [control]="formGroup.controls.login"
-    ></app-login-input>
+    <p-inputGroup class="login-input">
+      <p-inputGroupAddon>
+        <i class="pi pi-user"></i>
+      </p-inputGroupAddon>
+      <app-text-input
+        class="login-page__login-input"
+        [formControlName]="'login'"
+        [placeholder]="'Почта'"
+      ></app-text-input>
+    </p-inputGroup>
     <p-inputGroup class="login-page__password-input">
       <p-inputGroupAddon>
         <i class="pi pi-lock"></i>
@@ -23,19 +29,11 @@
 
     <p-button
       class="login-page__submit-button p-button-wrapper_center-text p-button-wrapper_full-width"
-      (mouseleave)="onSubmitButtonMouseOut()"
-      (click)="onSubmit($event)"
+      (click)="onSubmit()"
       [raised]="formGroup.valid"
       severity="submit"
       >Войти</p-button
     >
-    <p-overlayPanel #submitErrorPanel>
-      <ng-template pTemplate="content">
-        <h5 class="login-page__error-text">
-          Пожалуйста, заполните все поля правильно
-        </h5>
-      </ng-template>
-    </p-overlayPanel>
   </form>
 </div>
 <ng-template #loader>
