--- a/src/app/shared/components/inputs/password-input/password-input.component.html
+++ b/src/app/shared/components/inputs/password-input/password-input.component.html
@@ -1,20 +1,36 @@
 <p-password
+  #input
   class="password-input"
+  [ngModel]="currentValue"
   [placeholder]="placeholder"
   [toggleMask]="true"
-  [formControl]="control"
+  [feedback]="withCreationHints"
   [promptLabel]="'Введите пароль'"
   [weakLabel]="'Слабый'"
   [mediumLabel]="'Средний'"
   [strongLabel]="'Сильный'"
+  [appendTo]="'body'"
+  (input)="writeValue(input.value || '')"
 >
-  <ng-template pTemplate="footer">
+  <ng-template *ngIf="withCreationHints" pTemplate="footer">
     <p-divider></p-divider>
-    <p class="mt-2">Требования:</p>
+    <p>Требования:</p>
     <ul class="password-input__errors">
-      <li *ngFor="let req of requrements | keyvalue">
-        {{ req.key | formatPasswordRequirement: req.value }}
+      <li *ngFor="let hint of hints | keyvalue">
+        {{ hint.key | formatPasswordRequirement: hint.value }}
       </li>
     </ul>
   </ng-template>
 </p-password>
+<button
+  *ngIf="withClearButton"
+  class="password-input__clear-button"
+  (click)="writeValue('')"
+>
+  <i class="pi pi-times"></i>
+</button>
+<p-overlayPanel #errorPanel [dismissable]="false">
+  <ng-template pTemplate="content">
+    <h5 class="password-input__error-message">{{ errorMessage }}</h5>
+  </ng-template>
+</p-overlayPanel>
