--- a/src/app/shared/components/inputs/password-input/password-input.component.scss
+++ b/src/app/shared/components/inputs/password-input/password-input.component.scss
@@ -1,11 +1,34 @@
+@import 'mixins';
+
+$clear-button-width: 2.5em;
+
 :host {
-  flex-grow: 1;
+  @include flex();
+
   width: 100%;
 
   ::ng-deep {
     .p-password,
     .p-inputtext {
       width: 100%;
+    }
+
+    .p-password-panel {
+      z-index: var(--password-hints-layer) !important;
+    }
+  }
+
+  &.ng-invalid.ng-touched ::ng-deep .p-inputtext {
+    border-color: var(--red-500);
+  }
+
+  &:has(.password-input__clear-button) ::ng-deep {
+    .p-icon-wrapper {
+      translate: -200%;
+    }
+
+    .p-inputtext {
+      padding-right: calc(2 * $clear-button-width);
     }
   }
 }
@@ -15,9 +38,33 @@
 }
 
 .password-input {
+  width: 100%;
+
   &__errors {
     list-style: none;
     padding-left: 0;
     line-height: 1.5;
+  }
+
+  &__clear-button {
+    z-index: 0;
+
+    width: $clear-button-width;
+    margin-left: -$clear-button-width;
+
+    padding: 0.25em 0;
+    @include flex();
+
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+
+    color: var(--text);
+    font-size: 1em;
+  }
+
+  &__error-message {
+    margin: 0;
+    color: var(--red-500);
   }
 }
