feat: добавлено расстояние от инпута при появлении ошибок, вынесены общие стили

--- a/src/app/shared/components/inputs/password-input/password-input.component.html
+++ b/src/app/shared/components/inputs/password-input/password-input.component.html
@@ -29,7 +29,11 @@
 >
   <i class="pi pi-times"></i>
 </button>
-<p-overlayPanel #errorPanel [dismissable]="false">
+<p-overlayPanel
+  #errorPanel
+  [dismissable]="false"
+  [appendTo]="elementRef.nativeElement"
+>
   <ng-template pTemplate="content">
     <h5 class="password-input__error-message">{{ errorMessage }}</h5>
   </ng-template>
