--- a/src/app/shared/components/inputs/password-input/password-input.component.scss
+++ b/src/app/shared/components/inputs/password-input/password-input.component.scss
@@ -1,8 +1,8 @@
 @import 'mixins';
-
-$clear-button-width: 2.5em;
+@import '../text-input-base.component.scss';
 
 :host {
+  position: relative;
   @include flex();
 
   width: 100%;
@@ -15,6 +15,11 @@ $clear-button-width: 2.5em;
 
     .p-password-panel {
       z-index: var(--password-hints-layer) !important;
+    }
+
+    .p-overlaypanel {
+      top: 100% !important;
+      left: 0% !important;
     }
   }
 
@@ -38,33 +43,11 @@ $clear-button-width: 2.5em;
 }
 
 .password-input {
-  width: 100%;
+  @include custom-input();
 
   &__errors {
     list-style: none;
     padding-left: 0;
     line-height: 1.5;
-  }
-
-  &__clear-button {
-    z-index: 0;
-
-    width: $clear-button-width;
-    margin-left: -$clear-button-width;
-
-    padding: 0.25em 0;
-    @include flex();
-
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
-
-    color: var(--text);
-    font-size: 1em;
-  }
-
-  &__error-message {
-    margin: 0;
-    color: var(--red-500);
   }
 }
