--- a/src/app/shared/styles/theme/_extensions.scss
+++ b/src/app/shared/styles/theme/_extensions.scss
@@ -4,6 +4,7 @@
 @import 'extensions/button';
 @import 'extensions/overlay-panel';
 @import 'extensions/menubar';
+@import 'extensions/input-group';
 @import 'extensions/toast';
 @import 'extensions/progress-spinner';
 @import 'extensions/dialog';
