--- a/src/app/shared/styles/theme/_variables.scss
+++ b/src/app/shared/styles/theme/_variables.scss
@@ -27,6 +27,7 @@
   --cropper-outline-color: rgba(0, 0, 0, 0.4);
 
   --hover-transition: ease-in-out 300ms;
+  --error-message-transition: ease-in-out 150ms;
 
   // Z-index layers
   --header-layer: 1;
