--- a/src/app/shared/components/inputs/text-input/text-input.component.scss
+++ b/src/app/shared/components/inputs/text-input/text-input.component.scss
@@ -1,8 +1,8 @@
 @import 'mixins';
-
-$clear-button-width: 2.5em;
+@import '../text-input-base.component.scss';
 
 :host {
+  position: relative;
   @include flex();
 
   width: 100%;
@@ -14,6 +14,11 @@ $clear-button-width: 2.5em;
   &:has(.text-input__clear-button) .text-input {
     padding-right: $clear-button-width;
   }
+
+  ::ng-deep .p-overlaypanel {
+    top: 100% !important;
+    left: 0% !important;
+  }
 }
 
 .p-inputgroup-addon + :host {
@@ -23,25 +28,5 @@ $clear-button-width: 2.5em;
 }
 
 .text-input {
-  width: 100%;
-
-  &__clear-button {
-    width: $clear-button-width;
-    margin-left: -$clear-button-width;
-
-    padding: 0.25em 0;
-    @include flex();
-
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
-
-    color: var(--text);
-    font-size: 1em;
-  }
-
-  &__error-message {
-    margin: 0;
-    color: var(--red-500);
-  }
+  @include custom-input();
 }
